// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders a form combo 1`] = `
.emotion-8 {
  border: 0;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-7 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.emotion-6 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.emotion-6:before {
  position: absolute;
  content: "\\200B";
}

.emotion-9 {
  max-width: 25rem;
  width: auto;
}

.emotion-5 {
  display: block;
  position: relative;
}

.emotion-3 select,
.emotion-3 input {
  border-radius: 100px;
}

.emotion-1 {
  display: block;
  margin-bottom: 0.5rem;
  color: #8697A2;
  font-size: 1rem;
}

.emotion-2 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.emotion-2::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.emotion-2::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.emotion-2:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.emotion-2::placeholder {
  color: #6F7379;
  opacity: 1;
}

.emotion-2:hover:not(:focus) {
  border-color: #5A5F65;
}

.emotion-2:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.emotion-2:invalid,
.emotion-2:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-2:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-2:focus {
  border-color: #0CD664;
  outline: none;
}

.emotion-4 {
  position: absolute;
  right: 0.28125rem;
  bottom: 0.28125rem;
}

<form
  className="emotion-9"
>
  <fieldset
    className="emotion-8"
  >
    <legend
      className="emotion-0"
    >
      2FA
    </legend>
    <ul
      className="emotion-7"
    >
      <li
        className="emotion-6"
      >
        <div
          className="emotion-5"
        >
          <div
            className="emotion-3"
          >
            <label>
              <span
                className="emotion-1"
              >
                Enable Two Factor Authentication
              </span>
              <input
                className="emotion-2"
                placeholder="Enter code"
                type="text"
              />
            </label>
          </div>
          <div
            className="emotion-4"
          >
            <button
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders a form combo without a label 1`] = `
.emotion-7 {
  border: 0;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-6 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.emotion-5 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.emotion-5:before {
  position: absolute;
  content: "\\200B";
}

.emotion-8 {
  max-width: 25rem;
  width: auto;
}

.emotion-4 {
  display: block;
  position: relative;
}

.emotion-2 select,
.emotion-2 input {
  border-radius: 100px;
}

.emotion-1 {
  width: 100%;
  max-width: 100%;
  padding: 0.5625rem 0.9375rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  font-size: 1rem;
  line-height: 1.5rem;
  color: #FFF;
  background-color: #1A212A;
  border: 1px solid #3D434B;
  border-radius: 4px;
  -webkit-transition: border-color 0.2s ease;
  transition: border-color 0.2s ease;
  -webkit-appearance: none;
}

.emotion-1::-webkit-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.emotion-1::-moz-placeholder {
  color: #6F7379;
  opacity: 1;
}

.emotion-1:-ms-input-placeholder {
  color: #6F7379;
  opacity: 1;
}

.emotion-1::placeholder {
  color: #6F7379;
  opacity: 1;
}

.emotion-1:hover:not(:focus) {
  border-color: #5A5F65;
}

.emotion-1:not(:placeholder-shown):invalid {
  border-color: #FF4E64;
}

.emotion-1:invalid,
.emotion-1:-moz-ui-invalid {
  box-shadow: none;
}

.emotion-1:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.emotion-1:focus {
  border-color: #0CD664;
  outline: none;
}

.emotion-3 {
  position: absolute;
  right: 0.28125rem;
  bottom: 0.28125rem;
}

<form
  className="emotion-8"
>
  <fieldset
    className="emotion-7"
  >
    <legend
      className="emotion-0"
    >
      2FA
    </legend>
    <ul
      className="emotion-6"
    >
      <li
        className="emotion-5"
      >
        <div
          className="emotion-4"
        >
          <div
            className="emotion-2"
          >
            <input
              className="emotion-1"
              placeholder="Enter code"
              type="text"
            />
          </div>
          <div
            className="emotion-3"
          >
            <button
              type="submit"
            >
              Submit
            </button>
          </div>
        </div>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders correctly 1`] = `
.emotion-8 {
  width: auto;
}

.emotion-7 {
  border: 0;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-6 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.emotion-1 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-2 {
  display: inline-block;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #FF4E64;
}

<form
  className="emotion-8"
>
  <fieldset
    className="emotion-7"
  >
    <legend
      className="emotion-0"
    >
      Sign up
    </legend>
    <ul
      className="emotion-6"
    >
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput1"
        >
          Name
          <input
            id="testInput1"
            placeholder="e.g. John Appleseed"
            type="text"
          />
        </label>
      </li>
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput1"
        >
          Password
          <input
            id="testInput1"
            type="password"
          />
        </label>
        <p
          className="emotion-2"
          role="alert"
        >
          Please enter a valid password.
        </p>
      </li>
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput2"
        >
          <input
            id="testInput2"
            name="terms"
            type="checkbox"
            value="terms"
          />
          I agree to the terms and conditions.
        </label>
      </li>
      <li
        className="emotion-1"
      >
        <button
          type="submit"
          value="submit"
        >
          Sign up
        </button>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders with HTML form attributes 1`] = `
.emotion-8 {
  width: auto;
}

.emotion-7 {
  border: 0;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-6 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.emotion-1 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-2 {
  display: inline-block;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #FF4E64;
}

<form
  action="#"
  autocomplete="on"
  className="emotion-8"
  method="post"
>
  <fieldset
    className="emotion-7"
  >
    <legend
      className="emotion-0"
    >
      Sign up
    </legend>
    <ul
      className="emotion-6"
    >
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput1"
        >
          Name
          <input
            id="testInput1"
            placeholder="e.g. John Appleseed"
            type="text"
          />
        </label>
      </li>
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput1"
        >
          Password
          <input
            id="testInput1"
            type="password"
          />
        </label>
        <p
          className="emotion-2"
          role="alert"
        >
          Please enter a valid password.
        </p>
      </li>
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput2"
        >
          <input
            id="testInput2"
            name="terms"
            type="checkbox"
            value="terms"
          />
          I agree to the terms and conditions.
        </label>
      </li>
      <li
        className="emotion-1"
      >
        <button
          type="submit"
          value="submit"
        >
          Sign up
        </button>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders with custom fullWidth 1`] = `
.emotion-7 {
  border: 0;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-6 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.emotion-1 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-2 {
  display: inline-block;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #FF4E64;
}

.emotion-8 {
  width: 100%;
}

<form
  className="emotion-8"
>
  <fieldset
    className="emotion-7"
  >
    <legend
      className="emotion-0"
    >
      Sign up
    </legend>
    <ul
      className="emotion-6"
    >
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput1"
        >
          Name
          <input
            id="testInput1"
            placeholder="e.g. John Appleseed"
            type="text"
          />
        </label>
      </li>
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput1"
        >
          Password
          <input
            id="testInput1"
            type="password"
          />
        </label>
        <p
          className="emotion-2"
          role="alert"
        >
          Please enter a valid password.
        </p>
      </li>
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput2"
        >
          <input
            id="testInput2"
            name="terms"
            type="checkbox"
            value="terms"
          />
          I agree to the terms and conditions.
        </label>
      </li>
      <li
        className="emotion-1"
      >
        <button
          type="submit"
          value="submit"
        >
          Sign up
        </button>
      </li>
    </ul>
  </fieldset>
</form>
`;

exports[`Form renders with custom maxWidth 1`] = `
.emotion-7 {
  border: 0;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-6 {
  display: block;
  margin-left: 0;
  margin-top: 0;
}

.emotion-1 {
  display: block;
  list-style-type: none;
  margin-bottom: 1rem;
}

.emotion-1:before {
  position: absolute;
  content: "\\200B";
}

.emotion-2 {
  display: inline-block;
  margin-top: 0.5rem;
  font-size: 0.75rem;
  color: #FF4E64;
}

.emotion-8 {
  max-width: 30rem;
  width: auto;
}

<form
  className="emotion-8"
>
  <fieldset
    className="emotion-7"
  >
    <legend
      className="emotion-0"
    >
      Sign up
    </legend>
    <ul
      className="emotion-6"
    >
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput1"
        >
          Name
          <input
            id="testInput1"
            placeholder="e.g. John Appleseed"
            type="text"
          />
        </label>
      </li>
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput1"
        >
          Password
          <input
            id="testInput1"
            type="password"
          />
        </label>
        <p
          className="emotion-2"
          role="alert"
        >
          Please enter a valid password.
        </p>
      </li>
      <li
        className="emotion-1"
      >
        <label
          htmlFor="testInput2"
        >
          <input
            id="testInput2"
            name="terms"
            type="checkbox"
            value="terms"
          />
          I agree to the terms and conditions.
        </label>
      </li>
      <li
        className="emotion-1"
      >
        <button
          type="submit"
          value="submit"
        >
          Sign up
        </button>
      </li>
    </ul>
  </fieldset>
</form>
`;
